# medicalka

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: celery_app.py  config.py  dependencies.py  main.py  security.py  tasks.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: c7092441151c_initial.py
backend/app/db/: __init__.py
backend/app/models/: __init__.py
backend/app/repositories/: comment_repository.py  like_repository.py  post_repository.py  user_repository.py
backend/app/routers/: auth_router.py  comment_router.py  like_router.py  post_router.py
backend/app/schemas/: comment_schema.py  like_schema.py  post_schema.py  user_schema.py
backend/app/services/: auth_service.py  comment_service.py  like_service.py  post_service.py
backend/app/tests/: auth_test.py
backend/tests/: test_auth.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: client.js
frontend/src/components/: NavBar.vue  PostCard.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: HomeView.vue  LoginView.vue  PostDetailView.vue  PostFormView.vue  ProfileView.vue  RegisterView.vue  VerifyEmailView.vue
