[project]
name = "medicalka-backend"
version = "0.1.0"
requires-python = ">=3.14"

[tool.ruff]
line-length = 100
extend-exclude = ["_", "alembic/versions", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "C4",
    "SIM",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
